# deck-assistant

./: .clang-format  .gitignore  .lcovrc  AUTHORS  CMakeLists.txt  CMakePresets.json  README.md  meson.build  meson.options
examples/: obs_updown_counter.lua  twitch_marathon_timer.lua  twitch_marathon_timer_v2.lua
scripts/: CMakeLists.txt  connector.llm.lua  connector.oauth2.lua  connector.obs.lua  connector.ollama.lua  connector.twitch.lua  deck.connectors.lua  deck.widgets.lua  meson.build
src/: CMakeLists.txt  application.cpp  application.h  builtins.cpp  builtins.h  connector_base.cpp  connector_base.h  connector_base.hpp  connector_elgato_streamdeck.cpp  connector_elgato_streamdeck.h  connector_http.cpp  connector_http.h  connector_server_socket.cpp  connector_server_socket.h  connector_server_socket_client.cpp  connector_server_socket_client.h  connector_spout.cpp  connector_spout.h  connector_vnc.cpp  connector_vnc.h  connector_websocket.cpp  connector_websocket.h  connector_window.cpp  connector_window.h  deck_card.cpp  deck_card.h  deck_colour.cpp  deck_colour.h  deck_component.cpp  deck_component.h  deck_connector.cpp  deck_connector.h  deck_connector_container.cpp  deck_connector_container.h  deck_connector_factory.cpp  deck_connector_factory.h  deck_enum.cpp  deck_enum.h  deck_font.cpp  deck_font.h  (+54 more)
src/builtins/: builtins.lua  connectors.lua  main_window_script.lua  oauth2_callback.html  vera_ttf.c
subprojects/: libvncserver.wrap  luajit.wrap
subprojects/packagefiles/luajit/: build.py  meson.build
test/: fake_twitch_messages.json  fake_twitch_webserver.py
tools/: CMakeLists.txt  local_xxd.cpp  meson.build
