option(
    'test',
    type: 'feature',
    value: 'auto',
    description: 'Compile unit tests',
)

option(
    'luajit',
    type: 'feature',
    value: 'auto',
    description: 'Use LuaJIT instead of regular lua',
)

option(
    'sdl-image',
    type: 'feature',
    value: 'auto',
    description: 'Include SDL2-image to load and display images',
)

option(
    'sdl-ttf',
    type: 'feature',
    value: 'auto',
    description: 'Include SDL2-ttf to render fonts',
)

option(
    'streamdeck',
    type: 'feature',
    value: 'auto',
    description: 'Support for Elgato Stream Deck',
)
