option(
    'test',
    type: 'feature',
    value: 'auto',
    description: 'Compile unit tests',
)

option(
    'luajit',
    type: 'feature',
    value: 'auto',
    description: 'Use LuaJIT instead of regular lua',
)

option(
    'gnutls',
    type: 'feature',
    value: 'auto',
    description: 'Use GnuTLS for hashes and crypto functions',
)

option(
    'ssl',
    type: 'feature',
    value: 'auto',
    description: 'Use OpenSSL when GnuTLS is not available',
)

option(
    'vnc',
    type: 'feature',
    value: 'auto',
    description: 'Use libvncserver to host a VNC connection',
)
